<resources>
    <string name="app_name">Fast Response SR5K3</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_name">Nama</string>
    <string name="hint_password">Password</string>
    <string name="hint_nik">NIK</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="tambah_data_kecelakaan">Tambah Data Kecelakaan</string>
    <string name="tambah_data_kerusakan">Tambah Data Kerusakan</string>
    <string name="data_kecelakaan">Data Kecelakaan</string>
    <string name="data_kerusakan">Data Kerusakan</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="nama">Nama</string>
    <string name="nik">NIK</string>
    <string name="bagian">Bagian/Departemen</string>
    <string name="penanganan">Penanganan...</string>
    <string name="kronologi_kejadian">Kronologi kejadian...</string>
    <string name="tambahkan_foto">Tambahkan Foto</string>
    <string name="textview">TextView</string>
    <string name="area">Area</string>
    <string name="problem">Problem</string>
    <string name="cause">Cause</string>
    <string name="action">Action</string>
    <string name="colon">:</string>
    <string name="kronologi">Kronologi</string>
    <string name="input_tanggal">Masukkan Tanggal (dd-mm-yyyy)</string>
    <string name="atasan_langsung">Atasan Langsung</string>
    <string name="waktu">Masukkan Waktu (hr:mn)</string>
    <string name="pilih_waktu">Pilih Waktu</string>
</resources>
