<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:background="@drawable/background"
    tools:context="com.bagslabs.SafetySR4K3.MainActivity" >

    <LinearLayout
        android:id="@+id/topHor"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <Button
            android:id="@+id/btnAddAccident"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tambah_data_kecelakaan" />

        <Button
            android:id="@+id/btnAddCrash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tambah_data_kerusakan" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottHor"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/topHor"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <Button
            android:id="@+id/btnViewAccident"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/data_kecelakaan" />

        <Button
            android:id="@+id/btnViewCrash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/data_kerusakan" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/selamat_datang" />

</RelativeLayout>
