<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".AddAccidentsActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_submit_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:src="@drawable/ic_navigation_check_24" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/photo_added"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/todo"
                 />

            <EditText
                android:id="@+id/tv_dateresult"
                android:layout_below="@id/photo_added"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/input_tanggal"
                android:textColor="@color/primary_text" />

            <EditText
                android:id="@+id/tv_timeresult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_dateresult"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/waktu"
                android:textColor="@color/primary_text" />

            <EditText
                android:id="@+id/field_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_timeresult"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/nama"
                android:maxLines="1"
                android:textAllCaps="false" />

            <EditText
                android:id="@+id/field_nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_nama"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/nik"
                android:maxLines="1" />

            <EditText
                android:id="@+id/field_bagian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_nik"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/bagian"
                android:maxLines="1" />

            <EditText
                android:id="@+id/field_atasan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_bagian"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/atasan_langsung"
                android:maxLines="1" />

            <EditText
                android:id="@+id/field_krono"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/field_atasan"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:cursorVisible="true"
                android:hint="@string/kronologi_kejadian"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:scrollHorizontally="false" />

            <EditText
                android:id="@+id/field_penanganan"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/field_krono"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:hint="@string/penanganan"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:scrollHorizontally="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_penanganan"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addPhoto"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:text="@string/tambahkan_foto" />

                <TextView
                    android:id="@+id/fileName"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/textview" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>